refactor(page.controller.ts): Add swagger and remove everything useless
